--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </div>
       <section>
         <div class="hero">
-          <img src="/images/hero-mobile.jpg" alt="hero-mobile" class="hero-mobile">
-          <img src="/images/hero-desktop.jpg" alt="hero-desktop" class="hero-desktop">
+          <img src="./images/hero-mobile.jpg" alt="hero-mobile" class="hero-mobile">
+          <img src="./images/hero-desktop.jpg" alt="hero-desktop" class="hero-desktop">
         </div>
         <div class="left-section">
           <div class="text-wrapper">
@@ -33,7 +33,7 @@
           </div>
           <form class="form" id="form">
             <input type="email" placeholder="Email Address" id="email">
-            <img src="/images/icon-error.svg" alt="error-icon" class="error">
+            <img src="./images/icon-error.svg" alt="error-icon" class="error">
             <button>
               <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20"><path fill="none" stroke="#FFF" stroke-width="2" d="M1 1l8.836 8.836L1 18.671"/></svg>
             </button>
