--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <div class="container">
       <div class="logo">
-        <img src="/images/logo.svg" alt="logo">
+        <img src="./images/logo.svg" alt="logo">
       </div>
       <section>
         <div class="hero">
