edited for accessibilty

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
               Add your email below to stay up-to-date with announcements and our launch deals.</p>
           </div>
           <form class="form" id="form">
-            <input type="email" placeholder="Email Address" id="email" name="email">
+            <input type="email" placeholder="Email Address" id="email" aria-label="email input">
             <img src="./images/icon-error.svg" alt="error-icon" class="error">
-            <button>
+            <button aria-label="button to send email">
               <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20"><path fill="none" stroke="#FFF" stroke-width="2" d="M1 1l8.836 8.836L1 18.671"/></svg>
             </button>
             <small>Please provide a valid email</small>
